--- a/backend/src/.env
+++ b/backend/src/.env
@@ -2,4 +2,4 @@ PORT=4000
 MONGO_URI=mongodb://rebecca2:39716938@cluster0-shard-00-00.mongodb.net:27017,cluster0-shard-00-01.mongodb.net:27017,cluster0-shard-00-02.mongodb.net:27017/receitasmed?ssl=true&replicaSet=atlas-xxxxxx-shard-0&authSource=admin&retryWrites=true&w=majority
 
 OPENAI_API_KEY=https://api.openai.com/v1/chat/completions
-RECEITUARIO_TEMPLATE_PATH=./templates/Receituário_Fernando_Fernandes.pdf
+RECEITUARIO_TEMPLATE_PATH=./templates/Receituario.pdf
