--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+   "start": "node dist/index.js",
+  "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
