--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-   "start": "node dist/index.js",
-  "dev": "ts-node src/index.ts"
+  "start": "node dist/server.js",
+  "dev": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
