--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "backend",
+  "name": "receituario-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend para upload e processamento de PDFs de exames e geração de prescrições com IA",
+  "main": "dist/server.js",
   "scripts": {
-  "start": "node dist/index.js",
-  "dev": "ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.6.1",
-    "@types/pdf-parse": "^1.1.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.3",
-    "multer": "^2.0.2",
-    "openai": "^6.0.0",
-    "pdf-lib": "^1.17.1",
-    "pdf-parse": "^1.1.1"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-lib": "^1.23.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.5.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
