--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
-    "target": "ES6",
-    "module": "CommonJS",
-    "outDir": "./dist",
-    "baseUrl": "./src"
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
