--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
-    "strict": true,
+    "module": "commonjs",
+    "target": "es2019",
     "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "include": ["src"]
+    "strict": true
+  }
 }
