--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "Backend para upload e processamento de PDFs de exames e geração de prescrições com IA",
-  "main": "dist/server.js",
+  "name": "receitasmed-backend",
+  "private": true,
+  "type": "module",
+  "engines": { "node": ">=22.0.0" },
   "scripts": {
-    "build": "tsc && cp -R assets dist/assets",
+    "build": "tsc && cp -R assets dist/assets || true",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "tsx src/server.ts"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "mongoose": "^7.3.2",
-    "multer": "^1.4.5-lts.1",
-    "openai": "^6.1.0",
-    "pdf-lib": "^1.17.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "8.6.0",
+    "multer": "1.4.5-lts.1",
+    "openai": "^4.63.0",
     "pdf-parse": "^1.1.1",
+    "pdf-lib": "1.17.1",
     "pdfkit": "0.13.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.17",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.5.1",
-    "@types/pdfkit": "^0.17.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.11.30",
+    "@types/pdfkit": "0.13.6",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.4"
   }
 }
